--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
 // If need, change your variables before importing Bulma
-$title-color: #c7826c;
+$title-color: #ec7a72;
 
 @import '~bulma/bulma.sass';
