--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,13 @@
 @charset "utf-8";
 
+// Brand colors
+$good-pink: #ec7a72;
+
 // If need, change your variables before importing Bulma
-$title-color: #ec7a72;
+$primary: $good-pink;
+$title-color: $good-pink;
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Proza+Libre:wght@400;700&display=swap');
+$family-sans-serif: 'Open Sans', sans-serif;
 
 @import '~bulma/bulma.sass';
